Fix hero section text is above navbar on mobile

--- a/frontend/views/Landing/Landing.module.scss
+++ b/frontend/views/Landing/Landing.module.scss
@@ -7,7 +7,7 @@
 
 .textContainer {
   grid-column: span 5;
-  z-index: 100;
+  z-index: 99;
 }
 
 .globeContainer {
